crates/hydracache/tests/cacheable/fail_attribute_missing_key.stderr
error: cacheable attribute requires one key source: key or key_segments
 --> tests/cacheable/fail_attribute_missing_key.rs:1:1
  |
1 | / #[hydracache::cacheable(
2 | |     cache = cache,
3 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `hydracache::cacheable` (in Nightly builds, run with -Z macro-backtrace for more info)
